# star-shoot

./: CMakeLists.txt  README.md
src/: main.cpp
